// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extract browserify.js 1`] = `
function add(a, b) {
  return a + b;
}
module.exports = add;
`;

exports[`extract browserify.js 2`] = `
var sum = require("./sum");
var numbers = [1, 2, 3];
var result = sum(numbers);
var outputElement = document.getElementById("output");
outputElement.innerHTML = result;
`;

exports[`extract browserify.js 3`] = `
function reduce(list, iteratee, memo) {
  list.forEach(function (item) {
    memo = iteratee(item, memo);
  });
  return memo;
}
module.exports = reduce;
`;

exports[`extract browserify.js 4`] = `
var reduce = require("./reduce");
var add = require("./add");
function sum(list) {
  return reduce(list, add, 0);
}
module.exports = sum;
`;

exports[`extract webpack.js 1`] = `const a = require("./3.js");`;

exports[`extract webpack.js 2`] = `
const a = require("./1.js");
const _module = 1;
module.exports.color = "#FBC02D";
{
  const _module2 = 2;
  console.log(_module2);
  console.log(module);
}
exports.a = 3;
`;

exports[`extract webpack.js 3`] = `module.exports = 4;`;

exports[`extract webpack_object.js 1`] = `const r = require("./387.js").default;`;

exports[`extract webpack_object.js 2`] = `module.exports = "test";`;

exports[`extract webpack-esm.js 1`] = `
const a = require("./1.js");
const b = require("./2.js");
const c = require("./3.js");
const bDefault = b.default;
const cDefault = c;
const dDefault = b.default;
const eDefault = c;
console.log(a.counter);
console.log(bDefault.VERSION);
console.log(cDefault.VERSION);
`;

exports[`extract webpack-esm.js 2`] = `
export class counter {}
let _counter = 1;
counter = 2;
`;

exports[`extract webpack-esm.js 3`] = `
const x = {};
export default 1;
`;

exports[`extract webpack-esm.js 4`] = `
module.exports = {
  VERSION: 1
};
`;

exports[`extract webpack-var-injection.js 1`] = `
import * as m from "./1.js";
import * as n from "./2.js";
console.log(m, n);
`;

exports[`extract webpack-var-injection.js 2`] = `module.exports = 1;`;

exports[`extract webpack-var-injection.js 3`] = `module.exports = 2;`;

exports[`extract webpack5-esm.js 1`] = `
const lib = require("./3.js");
console.log(lib);
`;

exports[`extract webpack5-esm.js 2`] = `
import * as a from "./4.js";
const obj = {
  version: "2.0.0"
};
export let version = obj.version;
export default a.foo;
`;

exports[`extract webpack5-esm.js 3`] = `
export const foo = 2;
export var obj = {
  Console: bar
};
function bar() {}
`;

exports[`extract webpack5-object.js 1`] = `
const lib = require("./3.js");
console.log(lib);
const _0x8da276 = require(require.ab + "build/Release/spdlog.node");
`;

exports[`extract webpack5-object.js 2`] = `module.exports = "foo";`;

exports[`extractor > path mapping 1`] = `const a = require("./3.js");`;

exports[`extractor > path mapping 2`] = `
const a = require("../1.js");
const _module = 1;
module.exports.color = "#FBC02D";
{
  const _module2 = 2;
  console.log(_module2);
  console.log(module);
}
exports.a = 3;
`;

exports[`extractor > path mapping 3`] = `module.exports = 4;`;
